working with IO (lock and dispatch)

--- a/test.lang
+++ b/test.lang
@@ -1,14 +1,7 @@
-function gcd(a, b) {
-    while (a != b) {
-        if (a > b) {
-            a = a - b ;
-        } else {
-            b = b - a ;
-        }
-    }
-    return a ;
+
+function f(a, b) {
+    write(a) ;
+    write(b) ;
 }
 
-res = gcd(27, 72) ;
-eq_true = "abc" == "abc" ;
-eq_false = "abc" == "def ;
+f(1, 4) ;
