--- a/test.lang
+++ b/test.lang
@@ -1,10 +1,9 @@
-a = {
-    b : {
-        c : {
-            d : 1
-        }
-    }
-};
-e = {
-    f : a . b . c
-};
+
+a = { } ;
+b = "aa" ;
+a[b] = 1 ;
+if (keyExists(a, b)) {
+    write("aaa");
+} else {
+    write("bbb");
+}
